{
  "version": 4,
  "terraform_version": "1.3.8",
  "serial": 390,
  "lineage": "3b6e488b-321a-b065-904a-03635e692618",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eks_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0293286276865107a",
            "association_id": "eipassoc-0e2c989de26e18f04",
            "domain": "vpc",
            "id": "eipalloc-0293286276865107a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0656fcb4d187e2340",
            "private_dns": "ip-10-0-3-52.ec2.internal",
            "private_ip": "10.0.3.52",
            "public_dns": "ec2-44-194-33-247.compute-1.amazonaws.com",
            "public_ip": "44.194.33.247",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks_eip"
            },
            "tags_all": {
              "Name": "eks_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:179830966630:internet-gateway/igw-0591b26fc1a62cb0f",
            "id": "igw-0591b26fc1a62cb0f",
            "owner_id": "179830966630",
            "tags": {
              "Name": "eks_igw"
            },
            "tags_all": {
              "Name": "eks_igw"
            },
            "vpc_id": "vpc-01c4d497b413003e8"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "eks_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0293286276865107a",
            "association_id": "eipassoc-0e2c989de26e18f04",
            "connectivity_type": "public",
            "id": "nat-0466e26c3a1209c74",
            "network_interface_id": "eni-0656fcb4d187e2340",
            "private_ip": "10.0.3.52",
            "public_ip": "44.194.33.247",
            "subnet_id": "subnet-040b90567bf88c415",
            "tags": {
              "Name": "eks_nat"
            },
            "tags_all": {
              "Name": "eks_nat"
            }
          },
          "dependencies": [
            "aws_eip.eks_eip",
            "aws_internet_gateway.eks_igw",
            "aws_subnet.public_subnet_a",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:179830966630:route-table/rtb-0c420f640ca809257",
            "id": "rtb-0c420f640ca809257",
            "owner_id": "179830966630",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0466e26c3a1209c74",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks_private_route"
            },
            "tags_all": {
              "Name": "eks_private_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c4d497b413003e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eks_eip",
            "aws_internet_gateway.eks_igw",
            "aws_nat_gateway.eks_nat_gateway",
            "aws_subnet.public_subnet_a",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:179830966630:route-table/rtb-0a816dbcc3c885e20",
            "id": "rtb-0a816dbcc3c885e20",
            "owner_id": "179830966630",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0591b26fc1a62cb0f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks_public_route"
            },
            "tags_all": {
              "Name": "eks_public_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c4d497b413003e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cd517fdfcdf8cca",
            "route_table_id": "rtb-0c420f640ca809257",
            "subnet_id": "subnet-09758600b1fef9b9f"
          },
          "dependencies": [
            "aws_eip.eks_eip",
            "aws_internet_gateway.eks_igw",
            "aws_nat_gateway.eks_nat_gateway",
            "aws_route_table.eks_private_route",
            "aws_subnet.private_subnet_a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072894ad7acceac63",
            "route_table_id": "rtb-0c420f640ca809257",
            "subnet_id": "subnet-05ed36be86d004438"
          },
          "dependencies": [
            "aws_eip.eks_eip",
            "aws_internet_gateway.eks_igw",
            "aws_nat_gateway.eks_nat_gateway",
            "aws_route_table.eks_private_route",
            "aws_subnet.private_subnet_b",
            "aws_subnet.public_subnet_a",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8f226155c62ac6b",
            "route_table_id": "rtb-0a816dbcc3c885e20",
            "subnet_id": "subnet-040b90567bf88c415"
          },
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_route_table.eks_public_route",
            "aws_subnet.public_subnet_a",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06555a05562dcafbc",
            "route_table_id": "rtb-0a816dbcc3c885e20",
            "subnet_id": "subnet-042cdb07bcfc026eb"
          },
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_route_table.eks_public_route",
            "aws_subnet.public_subnet_b",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:179830966630:security-group/sg-08dc5948ddb209b64",
            "description": "Allow 443, 22, 3849 and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08dc5948ddb209b64",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "eks_firewall",
            "name_prefix": "",
            "owner_id": "179830966630",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01c4d497b413003e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eks_eip",
            "aws_internet_gateway.eks_igw",
            "aws_nat_gateway.eks_nat_gateway",
            "aws_route_table.eks_private_route",
            "aws_route_table_association.private_subnet_a",
            "aws_route_table_association.private_subnet_b",
            "aws_subnet.private_subnet_a",
            "aws_subnet.private_subnet_b",
            "aws_subnet.public_subnet_a",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:179830966630:subnet/subnet-09758600b1fef9b9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09758600b1fef9b9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "179830966630",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_a"
            },
            "tags_all": {
              "Name": "private_subnet_a"
            },
            "vpc_id": "vpc-01c4d497b413003e8"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:179830966630:subnet/subnet-05ed36be86d004438",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ed36be86d004438",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "179830966630",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_b"
            },
            "tags_all": {
              "Name": "private_subnet_b"
            },
            "vpc_id": "vpc-01c4d497b413003e8"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:179830966630:subnet/subnet-040b90567bf88c415",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040b90567bf88c415",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "179830966630",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_a"
            },
            "tags_all": {
              "Name": "public_subnet_a"
            },
            "vpc_id": "vpc-01c4d497b413003e8"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:179830966630:subnet/subnet-042cdb07bcfc026eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042cdb07bcfc026eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "179830966630",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_b"
            },
            "tags_all": {
              "Name": "public_subnet_b"
            },
            "vpc_id": "vpc-01c4d497b413003e8"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:179830966630:vpc/vpc-01c4d497b413003e8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a85b3806488e28b6",
            "default_route_table_id": "rtb-0ae11c3467e3475df",
            "default_security_group_id": "sg-0481fbced95c4efde",
            "dhcp_options_id": "dopt-08815cfd2865b0145",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01c4d497b413003e8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ae11c3467e3475df",
            "owner_id": "179830966630",
            "tags": {
              "Name": "eks_vpc"
            },
            "tags_all": {
              "Name": "eks_vpc"
            }
          }
        }
      ]
    }
  ]
}